Address Overflow Issue

--- a/index.css
+++ b/index.css
@@ -5,26 +5,51 @@ body {
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  
+}
+header{
+  color:hsla(22, 1%, 24%, 1);
+  display:grid;
+  grid-template-rows: 1fr;
+  background-color: hsla(22, 1%, 24%, 1);
+  height: 72px;
+  width: 100%;
+  
+}
+main{
+  width: 100% !important;
 }
 
 .nav {
-  background-color: hsla(22, 1%, 24%, 1);
-  width: 100%;
-  height: 72px;
+  
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  padding: 0 0;
+  width: 100%;
 }
-
+.nav ul{
+  float: right;
+}
+.nav ul li{
+  list-style: none;
+}
 .nav a {
   text-decoration: none;
 }
-
-.name {
-  font-family: "Roboto", sans-serif;
-  align-self: flex-start;
-  margin-left: 25px;
+.em{
+  display: none;
+}
+.logo {
+font-family: 'Roboto', sans-serif;
+font-size: 18px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0em;
+text-align: center;
+color:hsla(0, 0%, 100%, 1);
+float: left;
 }
 
 .pic {
@@ -668,35 +693,62 @@ footer {
   background-color: hsla(22, 6%, 10%, 1);
 }
 
+
 @media (min-width: 768px) {
-  .mob-menu {
+  
+  .logo{
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: hsla(0, 0%, 100%, 1);
+    padding: 0 100px;
+    float: left;
+    padding-top: 23px;
+
+  }
+  .em{
+    display: inline-block;
+    
+  }
+  .nav a{
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: hsla(0, 0%, 100%, 1);
+  }
+  .nav ul{
+    text-decoration: none;
+    float: right;
+    margin-right: 20px;
+
+  }
+  .nav ul li{
+    display: inline-block;
+    margin-right: 20px;
+  }
+  .nav ul li a:hover{
+    color: #ff6b00;
+    transform: scale(1.1);
+  }
+  .hidedk{
     display: none;
   }
 
   body {
     display: block;
-    width: 100vw;
-    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
   }
 
-  .desk-menu {
-    list-style: none;
-    display: flex;
-    column-gap: 24px;
-    margin: 8px 16px;
-  }
-
-  .desk-menu a {
-    text-decoration: none;
-    color: #fff;
-    font-family: "Inter", sans-serif;
-    font-style: bold;
-    font-size: 20px;
-    line-height: 20px;
-    line-height: 110%;
-    text-align: center;
-    vertical-align: middle;
-  }
+  
 
   .intro {
     display: grid;
@@ -715,9 +767,7 @@ footer {
     display: none;
   }
 
-  nav a {
-    display: block;
-  }
+  
 
   .social li:hover {
     transform: scale(1.5);
